syntax = "proto3";

package auth;

service AuthService {
  rpc Register (RegisterRequest) returns (RegisterResponse) {}
  rpc Login (LoginRequest) returns (LoginResponse) {}
  rpc Logout (LogoutRequest) returns (LogoutResponse) {}
}

message RegisterRequest {
  string email = 1;
  string password = 2;
}
message RegisterResponse {
  int32 status = 1;
  repeated string error = 2;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}
message LoginResponse {
  int32 status = 1;
  repeated string error = 2;  
  string accessToken = 3;
  string refreshToken = 4;
}

message LogoutRequest {
  string email = 1;  
  string accessToken = 2;
  string refreshToken = 3;
}
message LogoutResponse {
  int32 status = 1;
  repeated string error = 2;
}
